--- a/editor/index.html
+++ b/editor/index.html
@@ -4,7 +4,7 @@
     <title>Islands</title>
     <meta charset="UTF-8" />
 
-    <script type="module" src="main.js"></script>
+    <script type="module" src="main.ts"></script>
   </head>
   <style>
     body {
