--- a/editor/index.html
+++ b/editor/index.html
@@ -8,7 +8,9 @@
   </head>
   <style>
     body {
-      background-color: #333;
+      color: #eee;
+      font-family: sans-serif;
+      background-color: #888;
       margin: 0;
     }
 
@@ -18,18 +20,21 @@
 
     main {
       flex: 1;
-      background-color: #888;
       height: 100vh;
     }
 
     aside {
       width: 264px;
+      background-color: #333;
     }
   </style>
   <body>
     <div id="layout">
       <main id="root"></main>
-      <aside></aside>
+      <aside>
+        <button>Fit</button>
+        <hr />
+      </aside>
     </div>
   </body>
 </html>
