feat: add fit view button

--- a/editor/index.html
+++ b/editor/index.html
@@ -32,7 +32,7 @@
     <div id="layout">
       <main id="root"></main>
       <aside>
-        <button>Fit</button>
+        <button id="side-fit-button">Fit</button>
         <hr />
       </aside>
     </div>
