feat: add placeholder import and export buttons

--- a/editor/index.html
+++ b/editor/index.html
@@ -33,6 +33,8 @@
       <main id="root"></main>
       <aside>
         <button id="side-fit-button">Fit</button>
+        <button id="side-import-button">Import</button>
+        <button id="side-export-button">Export</button>
         <hr />
       </aside>
     </div>
