refactor: move css to a separate file

--- a/editor/index.html
+++ b/editor/index.html
@@ -3,31 +3,9 @@
   <head>
     <title>Islands</title>
     <meta charset="UTF-8" />
-
+    <link rel="stylesheet" href="style.css" />
     <script type="module" src="main.ts"></script>
   </head>
-  <style>
-    body {
-      color: #eee;
-      font-family: sans-serif;
-      background-color: #888;
-      margin: 0;
-    }
-
-    div#layout {
-      display: flex;
-    }
-
-    main {
-      flex: 1;
-      height: 100vh;
-    }
-
-    aside {
-      width: 264px;
-      background-color: #333;
-    }
-  </style>
   <body>
     <div id="layout">
       <main id="root"></main>
