--- a/editor/index.html
+++ b/editor/index.html
@@ -7,13 +7,22 @@
     <script type="module" src="main.ts"></script>
   </head>
   <body>
-    <div id="layout">
-      <main id="root"></main>
-      <aside>
-        <button id="side-fit-button">Fit</button>
-        <button id="side-import-button">Import</button>
-        <button id="side-export-button">Export</button>
-        <hr />
+    <div class="flex">
+      <main id="root" class="expand"></main>
+      <aside class="flex column">
+        <div class="expand flex column">
+          Name
+          <textarea></textarea>
+          Reference
+          <input type="text" />
+          Description
+          <textarea></textarea>
+        </div>
+        <input id="side-file-picker" type="file" accept=".json,.csv" multiple />
+        <div class="flex row">
+          <button id="side-fit-button">Fit</button>
+          <button id="side-export-button">Export</button>
+        </div>
       </aside>
     </div>
   </body>
