feat: implement file loading

--- a/editor/index.html
+++ b/editor/index.html
@@ -12,11 +12,11 @@
       <aside class="flex column">
         <div class="expand flex column">
           Name
-          <textarea></textarea>
+          <textarea id="side-edit-name"></textarea>
           Reference
-          <input type="text" />
+          <input type="text" id="side-edit-ref" />
           Description
-          <textarea></textarea>
+          <textarea class="expand" id="side-edit-desc"></textarea>
         </div>
         <input id="side-file-picker" type="file" accept=".json,.csv" multiple />
         <div class="flex row">
