refactor: move side panel logic into its own state

--- a/editor/index.html
+++ b/editor/index.html
@@ -17,6 +17,10 @@
           <input type="text" id="side-edit-ref" />
           Description
           <textarea class="expand" id="side-edit-desc"></textarea>
+          <div class="flex row gap">
+            <div class="expand">ID</div>
+            <div id="side-edit-id" class="nowrap ellipsis"></div>
+          </div>
         </div>
         <input id="side-file-picker" type="file" accept=".json,.csv" multiple />
         <div class="flex row">
