--- a/editor/index.html
+++ b/editor/index.html
@@ -4,7 +4,7 @@
     <title>Islands</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
-    <script type="module" src="main.ts"></script>
+    <script type="module" src="src/main.ts"></script>
   </head>
   <body>
     <div class="flex">
