feat: add button to fit selected nodes

--- a/editor/index.html
+++ b/editor/index.html
@@ -25,6 +25,7 @@
         <input id="side-file-picker" type="file" accept=".json,.csv" multiple />
         <div class="flex row">
           <button id="side-fit-button">Fit</button>
+          <button id="side-fit-sel-button">Sel</button>
           <button id="side-export-button">Export</button>
         </div>
       </aside>
