--- a/editor/index.html
+++ b/editor/index.html
@@ -18,6 +18,16 @@
           Description
           <textarea class="expand" id="side-edit-desc"></textarea>
           <div class="flex row gap">
+            <div>
+              <input type="checkbox" id="side-edit-class-fade" />
+              <label for="side-edit-class-fade">Fade</label>
+            </div>
+            <div>
+              <input type="checkbox" id="side-edit-class-draft" />
+              <label for="side-edit-class-draft">Draft</label>
+            </div>
+          </div>
+          <div class="flex row gap">
             <div class="expand">ID</div>
             <div id="side-edit-id" class="nowrap ellipsis"></div>
           </div>
