feat: wrap some action with undo-redo library calls

--- a/editor/index.html
+++ b/editor/index.html
@@ -36,6 +36,8 @@
         <div class="flex row">
           <button id="side-fit-button">Fit</button>
           <button id="side-fit-sel-button">Sel</button>
+          <button id="side-undo-button">Undo</button>
+          <button id="side-redo-button">Redo</button>
           <button id="side-export-button">Export</button>
         </div>
       </aside>
