feat(editor): use labels for text fields

--- a/editor/index.html
+++ b/editor/index.html
@@ -11,11 +11,11 @@
       <main id="root" class="expand"></main>
       <aside class="flex column">
         <div class="expand flex column">
-          Name
+          <label for="side-edit-name">Name</label>
           <textarea id="side-edit-name"></textarea>
-          Reference
+          <label for="side-edit-ref">Reference</label>
           <input type="text" id="side-edit-ref" />
-          Description
+          <label for="side-edit-desc">Description</label>
           <textarea class="expand" id="side-edit-desc"></textarea>
           <div class="flex row gap">
             <div>
