feat(editor): allow node shape selection

--- a/editor/index.html
+++ b/editor/index.html
@@ -18,6 +18,37 @@
           <label for="side-edit-desc">Description</label>
           <textarea class="expand" id="side-edit-desc"></textarea>
           <div class="flex row gap">
+            <label for="side-edit-shape">Shape</label>
+            <select class="expand" id="side-edit-shape">
+              <option selected value>default</option>
+              <option value="ellipse">ellipse</option>
+              <option value="triangle">triangle</option>
+              <option value="round-triangle">round-triangle</option>
+              <option value="rectangle">rectangle</option>
+              <option value="round-rectangle">round-rectangle</option>
+              <option value="bottom-round-rectangle">bottom-round-rectangle</option>
+              <option value="cut-rectangle">cut-rectangle</option>
+              <option value="barrel">barrel</option>
+              <option value="rhomboid">rhomboid</option>
+              <option value="right-rhomboid">right-rhomboid</option>
+              <option value="diamond">diamond</option>
+              <option value="round-diamond">round-diamond</option>
+              <option value="pentagon">pentagon</option>
+              <option value="round-pentagon">round-pentagon</option>
+              <option value="hexagon">hexagon</option>
+              <option value="round-hexagon">round-hexagon</option>
+              <option value="concave-hexagon">concave-hexagon</option>
+              <option value="heptagon">heptagon</option>
+              <option value="round-heptagon">round-heptagon</option>
+              <option value="octagon">octagon</option>
+              <option value="round-octagon">round-octagon</option>
+              <option value="star">star</option>
+              <option value="tag">tag</option>
+              <option value="round-tag">round-tag</option>
+              <option value="vee">vee</option>
+            </select>
+          </div>
+          <div class="flex row gap">
             <div>
               <input type="checkbox" id="side-edit-class-fade" />
               <label for="side-edit-class-fade">Fade</label>
