feat(editor): display referenced doc string

--- a/editor/html/side.html
+++ b/editor/html/side.html
@@ -5,7 +5,8 @@
     <label for="side-edit-ref">Reference</label>
     <input type="text" id="side-edit-ref" />
     <label for="side-edit-desc">Description</label>
-    <textarea class="expand" id="side-edit-desc"></textarea>
+    <textarea id="side-edit-desc"></textarea>
+    <div id="side-view-doc" class="expand"></div>
     <div class="flex row gap">
       <label for="side-edit-shape">Shape</label>
       <select id="side-edit-shape" class="expand">
