--- a/editor/html/side.html
+++ b/editor/html/side.html
@@ -1,12 +1,14 @@
 <aside class="flex column">
-  <div class="expand flex column">
+  <div class="flex column">
     <label for="side-edit-name">Name</label>
     <textarea id="side-edit-name"></textarea>
     <label for="side-edit-ref">Reference</label>
     <input type="text" id="side-edit-ref" />
     <label for="side-edit-desc">Description</label>
     <textarea id="side-edit-desc"></textarea>
-    <div id="side-view-doc" class="expand"></div>
+  </div>
+  <div id="side-view-doc" class="expand"></div>
+  <div class="flex column">
     <div class="flex row gap">
       <label for="side-edit-shape">Shape</label>
       <select id="side-edit-shape" class="expand">
