feat(editor): add location component

--- a/editor/html/side.html
+++ b/editor/html/side.html
@@ -58,6 +58,11 @@
       <div class="expand">ID</div>
       <div id="side-edit-id" class="nowrap ellipsis"></div>
     </div>
+    <div class="flex row gap" id="side-view-location">
+      <div class="expand">Location</div>
+      <div id="side-view-location-value" class="nowrap ellipsis"></div>
+      <button id="side-view-location-copy">Copy</button>
+    </div>
   </div>
   <input class="pad" id="side-file-picker" type="file" accept=".json,.csv" multiple />
   <div class="flex row pad">
