--- a/editor/html/side.html
+++ b/editor/html/side.html
@@ -55,11 +55,11 @@
       </div>
     </div>
     <div class="flex row gap">
-      <div class="expand">ID</div>
+      <div class="expand">ID:</div>
       <div id="side-edit-id" class="nowrap ellipsis"></div>
     </div>
     <div class="flex row gap" id="side-view-location">
-      <div class="expand">Location</div>
+      <div class="expand">Location:</div>
       <div id="side-view-location-value" class="nowrap ellipsis"></div>
       <button id="side-view-location-copy">Copy</button>
     </div>
