feat(editor): implement comment rendering

--- a/editor/html/side.html
+++ b/editor/html/side.html
@@ -53,6 +53,10 @@
         <input type="checkbox" id="side-edit-class-draft" />
         <label for="side-edit-class-draft">Draft</label>
       </div>
+      <div>
+        <input type="checkbox" id="side-edit-class-comment" />
+        <label for="side-edit-class-comment">Comment</label>
+      </div>
     </div>
     <div class="flex row gap">
       <div class="expand">ID:</div>
